--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="FreshStart AI - Land Your First Job Faster" />
     <meta property="og:description" content="Optimize your resume, cover letter, and LinkedIn—built for freshers!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="FreshStart AI - Land Your First Job Faster" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
